--- a/foodrun/package.json
+++ b/foodrun/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
     "wavesurfer.js": "^7.10.1"
   },
   "devDependencies": {
